# delay_crafter

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build_and_test.yml
assets/3d/: ui-models-dial.glb
shaders/: vs_triangle.sc
source/: DelayCrafter.cpp  DelayCrafter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/graphics/: BgfxComponent.cpp  BgfxComponent.h  SVGLoader.h
source/graphics/3d/camera/: Camera.cpp  Camera.h
source/graphics/3d/mesh/: Mesh.cpp  Mesh.h
tests/: PluginBasics.cpp
